--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Transform</title>
+    <style>
+        .box{
+            height: 150px;
+            width: 150px;
+            background-color: brown;
+            border-radius: 30%;
+             transition: 2s;
+        }
+        .box-main{
+            display: flex;
+            gap: 10px;
+           
+        }
+        .box:hover{
+            transform: skew(120deggit);
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="box-main">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
 </body>
 </html>
